--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type":"mpdule",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
+	"_comment": "build tsc dev tsc --watch",
 	"test": "npx jest"
   },
   "keywords": [],
